# supportpilot

./: .gitignore  README.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  database.py  main.py  models.py  schemas.py  seed.py
apps/api/app/routes/: knowledge.py  orders.py  tickets.py
apps/api/app/services/: knowledge.py  orders.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 2d78cce07b36_create_knowledge_articles.py  35015c641f35_create_orders.py  87cea1deb586_create_agent_run_trace_tables.py  94a569787d71_create_customers_and_tickets.py
apps/api/supportpilot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_health.py  test_knowledge.py  test_orders.py  test_tickets.py
apps/web/: package-lock.json
apps/web/src/: App.tsx  index.css
apps/web/src/api/: tickets.ts
apps/web/src/types/: ticket.ts
infra/: .env.example  docker-compose.yml
