[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "supportpilot-api"
version = "0.1.0"
description = "Backend API for the SupportPilot support operations platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic-settings",
    "psycopg[binary]",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx2",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.setuptools.packages.find]
include = ["app*"]